--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Game Dash</title>
-  </head>
-  <body>
-    <div id="react"></div>
-    <script src="bundle.js"></script>
-  </body>
+<html>
+<head>
+  <meta charset="utf-8" />
+ <title>Game Dash </title>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBW1KKWUALXgLRsz05GNgryIeYiJjtC4zU"></script>
+ <script type="text/javascript" src='/bundle.js' defer></script>
+  <link href="https://fonts.googleapis.com/css?family=Poppins:400,500|Source+Sans+Pro:300,400,600" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+<body>
+  <div id="map"></div>
+  <div id='react'></div>
+</body>
 </html>
